# beyond-intelli-gs-hack

./: README.md
.github/workflows/: terraform.yml
aws-terraform/: dynamodb.tf  ecs_cluster.tf  ecs_edu.tf  ecs_finnproducts.tf  ecs_users.tf  iam.tf  load-balancer.tf  logging.tf  networking.tf  providers.tf  route53.tf  secretmanager.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
gs-hack-education/: Dockerfile  pyproject.toml
gs-hack-education/github-workflows/workflows/: aws.yml
gs-hack-education/src/: main.py
gs-hack-education/tests/: test_gs_hack_finnproducts.py
gs-hack-finnproducts/: pyproject.toml
gs-hack-finnproducts/github-workflows/workflows/: aws.yml
gs-hack-finnproducts/src/: analytics.py  credit_cards.py  loans.py  main.py  util.py
gs-hack-frontend/: .env.production  .eslintrc.js  .prettierrc.js  README.md  package-lock.json  package.json  packages.txt
gs-hack-frontend/amplify/: team-provider-info.json
gs-hack-frontend/components/: DarkModeToggle.jsx  IndividualStock.jsx  Watchlist.jsx  creditCardRecommendations.jsx  navbar.jsx  testStockRecco.json  testcreditcarddata.json  testloandata.json  testnewsdata.json  teststockdata.json  testuserdata.json
gs-hack-frontend/context/: initialState.jsx  reducer.jsx
gs-hack-frontend/json/: user.js
gs-hack-frontend/pages/: FinancialPlanning.jsx  Investments.jsx  Loans.jsx  MaverickCommunity.jsx  _app.jsx  home.jsx  index.jsx  (+2 more)
gs-hack-user/: Dockerfile  pyproject.toml
gs-hack-user/github-workflows/workflows/: aws.yml
gs-hack-user/src/: ekyc.py  main.py  test.py  user.py  util.py
(+13 files in other folders)
